# sakila_lab_josefin_le

./: README.md  eda.ipynb  load_sakila_sqlite_duckdb.py  pyproject.toml
dashboard/pages/: index.md  sakila.md
dashboard/sources/sakila/: film_category.sql  rental_store.sql  rentals.sql
