[project]
name = "sakila-lab-josefin-le"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[parquet,sql-database]>=1.20.0",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
]
